# wuzup

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  repo-setup.py  ruff.toml
.github/workflows/: test_and_release.yml
[PROJECT]/: __main__.py
docs/: ai.html  cache.html  cli.html  exceptions.html  fetcher.html  image.html  index.html  playwright_fetcher.html  requests_fetcher.html  search.html
tests/: test_[PROJECT].py  test_wuzup.py
wuzup/: __main__.py  ai.py  cache.py  cli.py  exceptions.py  fetcher.py  image.py  playwright_fetcher.py  requests_fetcher.py  search.py
